--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^14.2.4",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^8.9.2",
     "@tabler/icons-react": "^3.1.0",
     "@types/three": "^0.163.0",
+    "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "debug": "^4.3.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc-dfd30974ab-20240613",
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
@@ -27,11 +30,14 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "semver": "^7.5.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "tar": "^6.2.1",
     "three": "^0.163.0",
     "three-globe": "^2.31.0",
-    "vercel": "^34.0.0"
+    "undici": "^5.28.4",
+    "vercel": "^34.2.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
@@ -52,5 +58,11 @@
     "prettier": "^3.3.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "semver": "^7.5.2",
+    "tar": "^6.2.1",
+    "debug": "^4.3.1",
+    "undici": "^5.28.4"
   }
 }
